--- a/index.html
+++ b/index.html
@@ -19,12 +19,17 @@
     <div id="pokedex">
 
         <div id="overlay">
-            <div id="popup">
-                <h2>Popup-Fenster</h2>
-                <p>Hier ist der Inhalt des Popup-Fensters.</p>
-                <button id="closeBtn">Schließen</button>
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
             </div>
         </div>
+
 
 
         <div class="card" style="width: 18rem;">
