--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
 
-    <script src="script.js"></script>
-    <script src="scriptPopup.js"></script>
     <link rel="shortcut icon" href="./img/pokemon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="stylePopup.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="bg-colors.css">
 </head>
 
 <body onload="loadPokemon(); includeHTML()">
@@ -23,17 +22,31 @@
 
     <div id="pokedex">
 
-        <div id="overlay">
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div id="overlay" class="overlay">
+            <button class="close" onclick="closeDialog()">&times;</button>
+            <div id="dialog" class="dialog">
+                <div class="dialog-content">
+                    <div class="tab">
+                        <button class="tablinks" onclick="openTab(event, 'about')">About</button>
+                        <button class="tablinks" onclick="openTab(event, 'stats')">Stats</button>
+                        <button class="tablinks" onclick="openTab(event, 'evolutions')">Entwicklungsformen</button>
+                    </div>
+                    <div id="about" class="tabcontent">
+                        <h3>About</h3>
+                        <p>Hier kommen die Informationen über das Pokemon.</p>
+                    </div>
+                    <div id="stats" class="tabcontent">
+                        <h3>Stats</h3>
+                        <p>Hier werden die Statistiken des Pokemons angezeigt.</p>
+                    </div>
+                    <div id="evolutions" class="tabcontent">
+                        <h3>Entwicklungsformen</h3>
+                        <p>Hier werden die Entwicklungsformen des Pokemons angezeigt.</p>
+                    </div>
                 </div>
             </div>
         </div>
+
 
 
 
@@ -47,16 +60,14 @@
                 <h5 class="card-title" id="pokemonName">Name</h5>
                 <p class="card-text" id="pokemonType">Typ</p>
             </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">Größe: <span id="pokemonHeight">Größe</span></li>
-                <li class="list-group-item">Gewicht: <span id="pokemonWeight">Gewicht</span></li>
-                <li class="list-group-item">Attacken: <span id="pokemonAbility">Attacken</span></li>
-            </ul>
         </div>
+
+        <button type="button" id="loadMoreButton" class="btn btn-secondary btn-lg">Weitere Pokémon laden</button>
 
     </div>
 
-
+    <script src="script.js"></script>
+    <script src="scriptPopup.js"></script>
 
 </body>
 
