--- a/index.html
+++ b/index.html
@@ -47,20 +47,10 @@
             </div>
         </div>
 
-
-
-
-        <div class="card fairy" style="width: 18rem;">
-            <img id="pokemonImg" class="card-img-top img-fluid rounded-start" alt="Togepi">
-            <div class="card-body">
-                <div class="pokedex-number-container">
-                    <p id="pokedexNumberSymbol">#</p>
-                    <p id="pokedexNumber">Nr.</p>
-                </div>
-                <h5 class="card-title" id="pokemonName">Name</h5>
-                <p class="card-text" id="pokemonType">Typ</p>
-            </div>
+        <div id="card" class="card fairy" style="width: 18rem;">
+          
         </div>
+      
 
         <button type="button" id="loadMoreButton" class="btn btn-secondary btn-lg">Weitere Pokémon laden</button>
 
