--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
             </div>
         </div>
 
-        <div id="card" class="card fairy" style="width: 18rem;">
-          
+        <div id="card">
         </div>
-      
 
-        <button type="button" id="loadMoreButton" class="btn btn-secondary btn-lg">Weitere Pokémon laden</button>
+        <div class="buttonStyle">
+            <button type="button" id="loadMoreButton" class="btn btn-secondary btn-lg">Weitere Pokémon laden</button>
+        </div>
 
     </div>
 
