--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="bg-colors.css">
 </head>
 
-<body onload="loadPokemon(); includeHTML()">
+<body onload="includeHTML()">
 
     <header>
         <div w3-include-html="./templates/header.html"></div>
