--- a/index.html
+++ b/index.html
@@ -23,31 +23,9 @@
     <div id="pokedex">
 
         <div id="overlay" class="overlay">
-            <button class="close" onclick="closeDialog()">&times;</button>
-            <div id="dialog" class="dialog">
-                <div class="dialog-content">
-                    <div class="tab">
-                        <button class="tablinks" onclick="openTab(event, 'about')">About</button>
-                        <button class="tablinks" onclick="openTab(event, 'stats')">Stats</button>
-                        <button class="tablinks" onclick="openTab(event, 'evolutions')">Entwicklungsformen</button>
-                    </div>
-                    <div id="about" class="tabcontent">
-                        <h3>About</h3>
-                        <p>Hier kommen die Informationen über das Pokemon.</p>
-                    </div>
-                    <div id="stats" class="tabcontent">
-                        <h3>Stats</h3>
-                        <p>Hier werden die Statistiken des Pokemons angezeigt.</p>
-                    </div>
-                    <div id="evolutions" class="tabcontent">
-                        <h3>Entwicklungsformen</h3>
-                        <p>Hier werden die Entwicklungsformen des Pokemons angezeigt.</p>
-                    </div>
-                </div>
-            </div>
         </div>
 
-        <div id="card">
+        <div id="card" onclick="createPopup()">
         </div>
 
         <div class="buttonStyle">
