--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokedex</title>
+    <title>Pokédex</title>
 
     <link rel="shortcut icon" href="./img/pokemon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
@@ -35,7 +35,6 @@
     </div>
 
     <script src="script.js"></script>
-    <script src="scriptPopup.js"></script>
 
 </body>
 
