--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </head>
 
   <body>
+    <div id="overlay"></div>
     <div class="header">
       <div class="headerLeft">
         <h1 class="headline">Pokédex</h1>
