search function revised

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="header">
       <div class="headerLeft">
         <h1 class="headline">Pokédex</h1>
-        <a href="../index.html"
+        <a href="./index.html"
           ><img src="./img/pokeball.jpg" alt="Pokeball" class="headerImg"
         /></a>
       </div>
@@ -31,7 +31,7 @@
         <button
           onclick="searchPokemon()"
           type="button"
-          class="btn btn-secondary btn-sm"
+          class="btn btn-secondary btn-sm searchButton"
         >
           Suchen
         </button>
