changed popup function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="stylePopup.css" />
     <link
       rel="stylesheet"
-      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+      href="./bootstrap.min.css"
     />
     <link rel="stylesheet" href="fonts.css" />
     <link rel="stylesheet" href="bg-colors.css" />
